--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
   
   <br>
   <div class="row">
-    <div class="col-8">
+    <div class="col">
       ![Topic 1 image](./topic1/img01.jpeg) 
     </div>
-    <div class="col-4">
+    <div class="col">
       [Topic 1: Listen to This](./topic1/index.html)
     </div>
   </div>
