--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   
   <br>
   <div class="row">
-    <div class="col-sm-8">
+    <div class="col-sm-auto">
       ![Topic 1 image](./topic1/img01.jpeg) 
     </div>
     <div class="col-sm-4">
