--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <div class="container-fluid bg-3 text-left">
   
   <br>
-  <div class="row">
-    <div class="col-sm-auto">
+  <div class="row justify-content-around">
+    <div class="col-sm-8">
       ![Topic 1 image](./topic1/img01.jpeg) 
     </div>
     <div class="col-sm-4">
