--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   
   <br>
   <div class="row">
-    <div class="col-sm-8">
+    <div class="col-sm-8" max-width: 60%>
       ![Topic 1 image](./topic1/img01.jpeg) 
     </div>
     <div class="col-sm-4">
