--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <nav class="navbar navbar-expand-sm navbar-light bg-light">
   <div style="align-items: left; justify-content:flex-start;" class="container-fluid">
     <h3 class="nav-title"> <b>Immersive Listening as Spatial Practice</b></h3>
+    
     <br>
     <h5>Boston Architectural College Spring 2024</h5>
   </div>
@@ -21,7 +22,7 @@
   
   <br>
   <div class="row">
-    <div class="col-sm-8" max-width: 60%>
+    <div class="col-sm-8">
       ![Topic 1 image](./topic1/img01.jpeg) 
     </div>
     <div class="col-sm-4">
