--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 <nav class="navbar navbar-expand-sm navbar-light bg-light">
   <div style="align-items: left; justify-content:flex-start;" class="container-fluid">
     <h3 class="nav-title"> <b>Immersive Listening as Spatial Practice</b></h3>
+    <div class="navbar-nav">
+      <h5><a class="nav-link" href="./index.html"><small>Meow</small></a></h5>
+      <h5><a class="nav-link" href="./index.html"><small>Woof</small></a></h5>
+    </div>
   </div>
 </nav>
 
@@ -18,45 +22,53 @@
 <div class="container-fluid bg-3 text-left">
   
   <br>
-  <div class="row">
-    <div class="col-sm-8">
+  <div class="row align-items-center">
+    <div class="col-9">
       ![Topic 1 image](./topic1/img01.jpeg)
     </div>
-    <div class="col-sm-4">
+    <div class="col-3">
       [Topic 1: Listen to This](./topic1/index.html)
+      <br>
+      <p><i> Five big quacking zephyrs jolt my wax bed. The quick brown fox jumps over the lazy dog. Many-wived Jack laughs at probes of sex quiz. Mix Zapf with Veljovic and get quirky Beziers. </i></p>
     </div>
   </div>
   <br>
- 
-   <br>
-  <div class="row">
-    <div class="col-8">
-      ![Topic 2 image](./topic2/img02.jpeg) 
+
+  <br>
+  <div class="row align-items-center">
+    <div class="col-9">
+      ![Topic 2 image](./topic2/img02.jpeg)
     </div>
-    <div class="col-4">
+    <div class="col-3">
       [Topic 2: Record This](./topic2/index.html)
+      <br>
+      <p><i> Five big quacking zephyrs jolt my wax bed. The quick brown fox jumps over the lazy dog. Many-wived Jack laughs at probes of sex quiz. Mix Zapf with Veljovic and get quirky Beziers. </i></p>
     </div>
   </div>
   <br>
 
-    <br>
-  <div class="row">
-    <div class="col-8">
-      ![Topic 3 image](./topic3/img03.jpeg) 
+  <br>
+  <div class="row align-items-center">
+    <div class="col-9">
+      ![Topic 3 image](./topic3/img03.jpeg)
     </div>
-    <div class="col-4">
-      [Topic 3: Edit This](./topic1/index.html)
+    <div class="col-3">
+      [Topic 3: Edit This](./topic3/index.html)
+      <br>
+      <p><i> Five big quacking zephyrs jolt my wax bed. The quick brown fox jumps over the lazy dog. Many-wived Jack laughs at probes of sex quiz. Mix Zapf with Veljovic and get quirky Beziers. </i></p>
     </div>
   </div>
-  <br> 
+  <br>
 
   <br>
-  <div class="row">
-    <div class="col-8">
-      ![Topic 4 image](./topic4/img04.jpeg) 
+  <div class="row align-items-center">
+    <div class="col-9">
+      ![Topic 4 image](./topic4/img04.jpeg)
     </div>
-    <div class="col-4">
-      [Topic 4: Now We Have This](./topic1/index.html)
+    <div class="col-3">
+      [Topic 4: Now We Have This](./topic4/index.html)
+      <br>
+      <p><i> Five big quacking zephyrs jolt my wax bed. The quick brown fox jumps over the lazy dog. Many-wived Jack laughs at probes of sex quiz. Mix Zapf with Veljovic and get quirky Beziers. </i></p>
     </div>
   </div>
   <br>
